--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize Environment\n",
+    "\n",
+    "All Python packages used  are listed in `enviroment.yml`, and the following command can be used to initialize a `conda` environment containing all packages:\n",
+    "\n",
+    "``\n",
+    "conda env create -f environment.yml\n",
+    "``"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
